--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "throttle-debounce": "^1.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.0",
