--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-progress-2": "^4.4.1",
     "react-router-dom": "^4.2.2",
     "throttle-debounce": "^1.0.1"
   },
