--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^15.6.1",
     "react-progress-2": "^4.4.1",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
     "throttle-debounce": "^1.0.1"
   },
   "devDependencies": {
@@ -20,8 +21,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "react-scripts": "1.0.13"
+    "eslint-plugin-standard": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
