chore: Add dependencies resolution

--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
